--- a/index.html
+++ b/index.html
@@ -16,21 +16,25 @@
                 <p>Copium: <span id="copium" class="resource-value">0</span></p>
                 <p class="per-second">Copium per second: <span id="cps">0</span></p>
                 <button id="collectCopiumButton">Collect Copium</button>
+                <button id="playCopiumGame" class="game-button">Play Copium Game</button>
             </div>
             <div class="resource">
                 <p>Delusion: <span id="delusion" class="resource-value">0</span></p>
                 <p class="per-second">Delusion per second: <span id="dps">0</span></p>
                 <button id="collectDelusionButton">Collect Delusion</button>
+                <button id="playDelusionGame" class="game-button">Play Delusion Game</button>
             </div>
             <div class="resource">
                 <p>Yarmulkes: <span id="yarmulkes" class="resource-value">0</span></p>
                 <p class="per-second">Yarmulkes per second: <span id="yps">0</span></p>
                 <button id="collectYarmulkesButton">Collect Yarmulkes</button>
+                <button id="playYarmulkesGame" class="game-button">Play Yarmulkes Game</button>
             </div>
             <div class="resource">
                 <p>Troll Points: <span id="trollPoints" class="resource-value">0</span></p>
                 <p class="per-second">Troll Points per second: <span id="tpps">0</span></p>
                 <button id="collectTrollPointsButton">Collect Troll Points</button>
+                <button id="playTrollPointsGame" class="game-button">Play Troll Points Game</button>
             </div>
             <div id="specialUpgrades">
                 <h2>Special Upgrades</h2>
