--- a/index.html
+++ b/index.html
@@ -36,6 +36,13 @@
                 <button id="collectTrollPointsButton">Collect Troll Points</button>
                 <button id="playTrollPointsGame" class="game-button">Play Troll Points Game</button>
             </div>
+            <p class="prestige-text">
+                Prestige: <span id="prestiges" class="prestige-count">0</span>
+                <br>
+                <span id="multiplier" class="multiplier-count">(x1.00 multiplier on everything)</span>
+            </p>
+            <button id="prestigeButton" style="display: none;" onclick="prestige()">Prestige</button>
+                          
             <div id="specialUpgrades">
                 <h2>Special Upgrades</h2>
                 <div id="upgradeList">
