--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle</title>
+    <title>Degens Idle v0.34</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="main-container">
         <div id="title-container">
-            <h1 id="title">Degens Idle</h1>
+            <h1 id="title">Degens Idle v0.34</h1>
         </div>
         <div id="game">
             <div class="resource">
@@ -42,12 +42,11 @@
                 <span id="multiplier" class="multiplier-count">(x1.00 multiplier on everything)</span>
             </p>
             <button id="prestigeButton" style="display: none;" onclick="prestige()">Prestige</button>
-                          
-            <div id="specialUpgrades">
-                <h2>Special Upgrades</h2>
-                <div id="upgradeList">
-                    <!-- Special upgrades will be dynamically added here -->
-                </div>
+        </div>
+        <div id="specialUpgrades">
+            <h2>Special Upgrades</h2>
+            <div id="upgradeList">
+                <!-- Special upgrades will be dynamically added here -->
             </div>
         </div>
         <div id="right-section">
