--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.34</title>
+    <title>Degens Idle v0.35</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="main-container">
-        <div id="title-container">
-            <h1 id="title">Degens Idle v0.34</h1>
+        <div id="title-column">
+            <div id="title-container">
+                <h1 id="title">Degens Idle v0.35</h1>
+            </div>
+            <div id="button-container">
+                <button id="restartButton">Restart Game</button>
+            </div>
         </div>
         <div id="game">
             <div class="resource">
