--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
                 <span id="multiplier" class="multiplier-count">(x1.00 multiplier on everything)</span>
             </p>
             <button id="prestigeButton" style="display: none;" onclick="prestige()">Prestige</button>
+            <button id="ascendButton" style="display: none;" onclick="ascend()">Ascend Above Mortals</button>
         </div>
-        <div id="specialUpgrades">
-            <h2>Special Upgrades</h2>
+        <div id="upgrades">
+            <h2>Upgrades</h2>
             <div id="upgradeList">
-                <!-- Special upgrades will be dynamically added here -->
+                <!-- Upgrades will be dynamically added here -->
             </div>
         </div>
         <div id="right-section">
