--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </button>
             </div>
             <p class="prestige=multiplier-text">
-                <span id="prestige-multiplier" class="prestige-multiplier-count">Prestige: x1.00 multiplier</span>
+                <span id="prestige-multiplier" class="prestige-multiplier-count">Prestige: x1.00 mult</span>
             </p>
             <button id="prestigeButton" style="display:none;">Prestige</button>
         </div>
