--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.41</title>
+    <title>Degens Idle v0.42</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -36,7 +36,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.41</h1>
+                <h1 id="title">Degens Idle v0.42</h1>
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Game</button>
@@ -85,10 +85,17 @@
                     <img src="imgs/cookie.jpg" alt="Cookie Button">
                 </button>
             </div>
+            <button id="prestigeButton" style="display:none;">Prestige</button>
             <p class="prestige=multiplier-text">
                 <span id="prestige-multiplier" class="prestige-multiplier-count">Prestige: x1.00 mult</span>
             </p>
-            <button id="prestigeButton" style="display:none;">Prestige</button>
+            <button id="ascendButton" style="display:none;">Ascend Above Mortals</button>
+            <p class="god-mode-text">
+                <span id="god-mode-level" class="god-mode-level">God Mode Level: 0</span>
+            </p>
+            <p class="god-mode-text">
+                <span id="god-mode-multiplier" class="god-mode-multiplier">God Mode Multiplier: x1.00</span>
+            </p>
         </div>
         <div id="upgrades">
             <h2>Upgrades</h2>
