removed double touch, small fixes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div id="game">
             <div class="resource">
-                <p>Copium: <span id="copium" class="resource-value">0</span></p>
+                <p><b>C</b>opium: <span id="copium" class="resource-value">0</span></p>
                 <p class="per-second">Copium per second: <span id="cps">0</span></p>
                 <div class="buttons">
                     <button id="collectCopiumButton" class="collect-button">Collect Copium</button>
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div class="resource">
-                <p>Delusion: <span id="delusion" class="resource-value">0</span></p>
+                <p><b>D</b>elusion: <span id="delusion" class="resource-value">0</span></p>
                 <p class="per-second">Delusion per second: <span id="dps">0</span></p>
                 <div class="buttons">
                     <button id="collectDelusionButton" class="collect-button">Collect Delusion</button>
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="resource">
-                <p>Yacht Money: <span id="yachtMoney" class="resource-value">0</span></p>
+                <p><b>Y</b>acht <b>M</b>oney: <span id="yachtMoney" class="resource-value">0</span></p>
                 <p class="per-second">Yacht Money per second: <span id="ymps">0</span></p>
                 <div class="buttons">
                     <button id="collectYachtMoneyButton" class="collect-button">Collect Yacht Money</button>
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="resource">
-                <p>Troll Points: <span id="trollPoints" class="resource-value">0</span></p>
+                <p><b>T</b>roll <b>P</b>oints: <span id="trollPoints" class="resource-value">0</span></p>
                 <p class="per-second">Troll Points per second: <span id="tpps">0</span></p>
                 <div class="buttons">
                     <button id="collectTrollPointsButton" class="collect-button">Collect Troll Points</button>
@@ -71,7 +71,7 @@
                 </div>
             </div>
             <div class="resource">
-                <p>Hopium: <span id="hopium" class="resource-value">0</span></p>
+                <p><b>H</b>opium: <span id="hopium" class="resource-value">0</span></p>
                 <p class="per-second">Hopium per second: <span id="hps">0</span></p>
                 <!-- No collect button for Hopium -->
             </div>
