buyAllUpgrades - contains bug!

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <button id="modalCancelButton">Cancel</button>
             </div>
             <div id="ascendUpgradeSelection" style="display:none;">
-                <h3>Select an Upgrade for God Mode:</h3>
+                <h3>Choose the upgrade you want to use as your ascension focal point - this will permanently enhance it to be 10x as strong.:</h3>
                 <div id="ascendUpgradeList"></div>
                 <button id="upgradeConfirmButton" style="display:none;">Confirm Selection</button>
             </div>
@@ -89,6 +89,7 @@
         </div>
         <div id="upgrades">
             <h2>Upgrades</h2>
+            <button id="buyAllButton">Buy All</button>
             <div id="upgradeList">
                 <!-- Upgrades will be dynamically added here -->
             </div>
