--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.63</title>
+    <title>Degens Idle v0.65</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.63</h1>
+                <h1 id="title">Degens Idle v0.65</h1>
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Game</button>
@@ -75,6 +75,18 @@
                 <p class="per-second">Hopium per second: <span id="hps">0</span></p>
                 <!-- No collect button for Hopium -->
             </div>
+            <div class="resource" id="knowledge-container" style="display: none;">
+                <p><b>K</b>nowledge: <span id="knowledge" class="resource-value">0</span></p>
+                <p class="per-second">Knowledge per second: <span id="kps">0</span></p>
+            </div>
+            <div class="resource" id="power-container" style="display: none;">
+                <p><b>P</b>ower: <span id="power" class="resource-value">0</span></p>
+                <p class="per-second">Power per second: <span id="pps">0</span></p>
+            </div>
+            <div class="resource" id="serenity-container" style="display: none;">
+                <p><b>S</b>erenity: <span id="serenity" class="resource-value">0</span></p>
+                <p class="per-second">Serenity per second: <span id="sps">0</span></p>
+            </div>
             <div id="cookieContainer" style="text-align: center;">
                 <button id="cookieButton" style="display: none;">
                     <img src="imgs/cookie.jpg" alt="Cookie Button">
@@ -114,7 +126,7 @@
                 </select>
                 <label for="tradeAmount">Amount:</label>
                 <input type="text" id="tradeAmount" value="" placeholder="Enter amount (e.g., 1M)">
-                <p id="tradeRatioDisplay">Trade ratio is 5:1</p>
+                <p id="tradeRatioDisplay">Trade ratio is 10:1</p>
                 <button id="tradeButton">Trade</button>
             </div>
             <div id="purchasedUpgrades">
