--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
     <!-- Include the Library overlay HTML -->
     <div id="libraryOverlay" class="library-overlay" style="display: none;">
         <div class="library-overlay-content">
-            <h1>Library</h1>
+            <h1>Hall of Knowledge</h1>
             <div id="librarySkills">
                 <!-- Skills will be dynamically added here -->
             </div>
-            <button id="closeLibraryButton">Close</button>
+            <button id="closeLibraryButton">Exit</button>
         </div>
     </div>
     <script src="upgrades.js"></script>
