--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.67</title>
+    <title>Degens Idle v0.68</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet"> <!-- Google Font -->
@@ -33,7 +33,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.67</h1>
+                <h1 id="title">Degens Idle v0.68</h1>
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Game</button>
@@ -145,6 +145,7 @@
     <div id="libraryOverlay" class="library-overlay" style="display: none;">
         <div class="library-overlay-content">
             <h1>Hall of Knowledge</h1>
+            <h4>Welcome to the illustrious Hall of Knowledge, a revered sanctuary where the wisdom of ages is preserved and shared. Within these hallowed halls, you will discover an array of skills and insights, each meticulously curated to empower your journey.<br><br>Every skill you acquire here is a beacon of enlightenment, and its benefits are everlasting. These skills are designed to endure, persisting across all prestiges, ascensions, and whatever challenges or triumphs the future may hold. Embrace the permanence of your newfound wisdom, for it will remain with you as a steadfast guide, lighting your path through every stage of your odyssey.</h4>
             <div id="librarySkills">
                 <!-- Skills will be dynamically added here -->
             </div>
