--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
             </div>
             <div class="resource">
                 <p><b>D</b>elusion: <span id="delusion" class="resource-value">0</span></p>
-                <p class="per-second">Delusion per second: <span id="dps">0</span></p>
+                <p class="per-second">Delusion per second: <span id="dps">0</span>
+                    <label class="switch hidden" id="toggleDelusionLabel">
+                        <input type="checkbox" id="toggleDelusion">
+                        <span class="slider"></span>
+                    </label>
+                </p>
                 <div class="buttons">
                     <button id="collectDelusionButton" class="collect-button">Collect Delusion</button>
                     <button id="memoryGame" class="game-button">Memory Game</button>
@@ -90,9 +95,10 @@
                 <p><b>S</b>erenity: <span id="serenity" class="resource-value">0</span></p>
                 <p class="per-second">Serenity per second: <span id="sps">0</span></p>
             </div>
-            <div id="cookieContainer" style="text-align: center;">
-                <button id="cookieButton" style="display: none;">
-                    <img src="imgs/cookie.jpg" alt="Cookie Button">
+            <div id="cookieContainer">
+                <button id="cookieButton">
+                    <img src="imgs/cookie.jpg" alt="Cookie">
+                    <span class="tooltip">Each cookie click counts as 10 clicks on collect buttons for Copium, Delusion, Yacht Money, and Troll Points!</span>
                 </button>
             </div>
             <button id="prestigeButton" style="display:none;">Prestige</button>
@@ -104,8 +110,8 @@
         </div>
         <div id="upgrades">
             <h2>Upgrades</h2>
-            <button id="buySeenButton">Buy Seen</button>
-            <button id="buyMaxButton">Buy Max</button>
+            <button id="buySeenButton" class="hidden">Buy Seen</button>
+            <button id="buyMaxButton" class="hidden">Buy Max</button>
             <div id="upgradeList">
                 <!-- Upgrades will be dynamically added here -->
             </div>
@@ -144,6 +150,7 @@
     <!-- Include the Library overlay HTML -->
     <div id="libraryOverlay" class="library-overlay" style="display: none;">
         <div class="library-overlay-content">
+            <span class="close-button" id="closeLibraryOverlay">&times;</span>
             <h1>Hall of Knowledge</h1>
             <h4>Welcome to the illustrious Hall of Knowledge, a revered sanctuary where the wisdom of ages is preserved and shared. Within these hallowed halls, you will discover an array of skills and insights, each meticulously curated to empower your journey.<br><br>Every skill you acquire here is a beacon of enlightenment, and its benefits are everlasting. These skills are designed to endure, persisting across all prestiges, ascensions, and whatever challenges or triumphs the future may hold. Embrace the permanence of your newfound wisdom, for it will remain with you as a steadfast guide, lighting your path through every stage of your odyssey.</h4>
             <div id="librarySkills">
