--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <p class="per-second">Serenity per second: <span id="sps">0</span></p>
             </div>
             <div id="cookieContainer">
-                <button id="cookieButton">
+                <button id="cookieButton" style="display:none;">
                     <img src="imgs/cookie.jpg" alt="Cookie">
                     <span class="tooltip">Each cookie click counts as 10 clicks on collect buttons for Copium, Delusion, Yacht Money, and Troll Points!</span>
                 </button>
