--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.68</title>
+    <title>Degens Idle v0.685</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" type="text/css" href="settings.css">
@@ -34,7 +34,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.68</h1>
+                <h1 id="title">Degens Idle v0.685</h1>
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Game</button>
@@ -100,7 +100,7 @@
             <div id="cookieContainer">
                 <button id="cookieButton" style="display:none;">
                     <img src="imgs/cookie.jpg" alt="Cookie">
-                    <span class="tooltip">Each cookie click counts as 10 clicks on collect buttons for Copium, Delusion, Yacht Money, and Troll Points!</span>
+                    <span class="cookieTooltip">Each cookie click counts as 10 clicks on collect buttons for Copium, Delusion, Yacht Money, and Troll Points!</span>
                 </button>
             </div>
             <button id="prestigeButton" style="display:none;">Prestige</button>
