--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.685</title>
+    <title>Degens Idle v0.69</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" type="text/css" href="settings.css">
@@ -34,10 +34,11 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.685</h1>
+                <h1 id="title">Degens Idle v0.69</h1>
             </div>
             <div id="button-container">
-                <button id="restartButton">Restart Game</button>
+                <button id="restartButton">Restart Entire Game</button>
+                <button id="restartPrestige">Restart This Prestige</button>
                 <button id="settingsButton">Settings</button>
                 <button id="libraryButton">Hall of Knowledge</button>
             </div>
