--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.69</title>
+    <title>Degens Idle v0.7</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" type="text/css" href="settings.css">
@@ -34,7 +34,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.69</h1>
+                <h1 id="title">Degens Idle v0.7</h1>
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Entire Game</button>
@@ -113,8 +113,10 @@
         </div>
         <div id="upgrades">
             <h2>Upgrades</h2>
-            <button id="buySeenButton" class="hidden">Buy Seen</button>
-            <button id="buyMaxButton" class="hidden">Buy Max</button>
+            <div class="multibuy-buttons-container">
+                <button id="buySeenButton" class="hidden">Buy Seen</button>
+                <button id="buyMaxButton" class="hidden">Buy Max</button>
+            </div>
             <div id="upgradeList">
                 <!-- Upgrades will be dynamically added here -->
             </div>
